rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-teste
  labels:
    app: rollouts-teste
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-teste
  template:
    metadata:
      labels:
        app: rollouts-teste
    spec:
      containers:
        - name: rollouts-teste
          image: "alexmt/rollouts-demo:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
    blueGreen:
      activeService: rollouts-teste
      previewService: rollouts-teste-preview
     #canary: 
     #  steps:
     #  - setWeight: 20
     #  - pause: {}
