preview-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc-preview
  labels:
    app: web-balancer
    type: frontend
spec:
  selector:
    app: web-balancer
    version: "latest"
  ports:
    - name: httpd-svc-preview
      port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
