service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-teste
  labels:
    app: rollouts-teste
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-teste
