web-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc-balancer
  labels:
    app: web-balancer
    type: frontend
spec:
  selector:
    app: web-balancer
    version: "latest"
  ports:
    - name: httpd-svc-balancer
      port: 80
      targetPort: 8888
      nodePort: 30010
  type: LoadBalancer
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout 
metadata:
  name: httpd-svc-balancer
  labels:
    app: web-balancer
    tier: frontend
spec:
  selector:
    matchLabels:
      app: web-balancer
  replicas: 5
  template:
    metadata:
      name: httpd-svc-balancer
      labels:
        app: web-balancer
        version: "latest"
        tier: frontend
    spec:
      containers:
        - name: httpd-svc-balancer
          image: 132818155912.dkr.ecr.us-east-1.amazonaws.com/terradorm-multi-cloud-repository:latest
  strategy:
    blueGreen:
      activeService: httpd-svc-balancer
      previewService: httpd-svc-preview
