ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd-svc-balancer
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "httpd"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: httpd-svc-balancer
          servicePort: 80
